# multi-model-agent

./: README.md
backend/: .gitignore  pyproject.toml
backend/app/: logging_config.py  main.py
backend/app/agents/: search_agent.py  summary_agent.py  supervisor_agent.py
backend/app/config/: settings.py
backend/app/data_ingest/: csv_ingest.py
backend/app/dependencies/: auth_dependencies.py
backend/app/memory/: redis_memory.py
backend/app/models/: auth_models.py  chat_models.py  ingest_models.py
backend/app/prompts/: llm_prompts.py
backend/app/routers/: auth.py  chat.py  health.py  ingest.py
backend/app/services/: auth_service.py  llm_service.py  search_service.py
backend/app/utils/: security.py
backend/app/workflows/: chat_workflow.py
backend/data/: ai_tooling_catalog.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AuthForm.tsx  Composer.tsx  MessageBubble.tsx  Navbar.tsx  StatusDot.tsx
frontend/src/pages/: DashboardPage.tsx  LandingPage.tsx  LoginPage.tsx  RegisterPage.tsx
