[project]
name = "backend"
version = "0.1.0"
description = "Backend application for multi-modal-agent project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch>=9.4.1",
    "email-validator>=2.3.0",
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langfuse>=4.12.0",
    "langgraph>=1.2.7",
    "openai>=2.44.0",
    "passlib>=1.7.4",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "uvicorn>=0.49.0",
    "PyPDF2>=3.0.0",
    "python-multipart>=0.0.9"
]
